@@ -12,10 +12,12 @@ Page {
 
     tools: commonTools
     orientationLock: prefs.orientation
+    focus: true
 
     BookView {
         id: bookView
         anchors.fill: parent
+        focus: true
         onLoadStarted: {
             spinner.visible = true
             spinner.running = true
@@ -39,7 +41,6 @@ Page {
         id: spinner
         platformStyle: BusyIndicatorStyle {size: "large"}
         anchors.centerIn: parent
-        focus: false
         visible: false
     }
 
@@ -57,6 +58,7 @@ Page {
         if (status == PageStatus.Activating) {
             revealer.active = true
             appWindow.showToolBar = prefs.showToolBar
+            focus = true
         } else if (status == PageStatus.Deactivating) {
             revealer.active = false
             appWindow.showToolBar = true
@@ -66,6 +68,15 @@ Page {
     onNowReadingChanged: {
         console.log("* MainPage.onNowReadingChanged")
         goTo(library.nowReading.lastBookmark.part, library.nowReading.lastBookmark.position, "#")
+    }
+
+    // Handle up/down keys
+    Keys.onPressed: {
+        if ((event.key == Qt.Key_VolumeUp) || (event.key == Qt.Key_Up) || (event.key == Qt.Key_PageUp)) {
+            bookView.goToPreviousPage()
+        } else if ((event.key == Qt.Key_VolumeDown) || (event.key == Qt.Key_Down) || (event.key == Qt.Key_PageDown)) {
+            bookView.goToNextPage()
+        }
     }
 
     function goToPreviousPage() {
